# ontosphere

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  docker-compose.neo4j.yml  docker-compose.yml
.claude/: settings.local.json
backend/: Dockerfile  alembic.ini  pyproject.toml  shapes.ttl
backend/alembic/: env.py
backend/app/: config.py  database.py  main.py
backend/app/api/: __init__.py  documents.py  events.py  export.py  graph.py  ontologies.py  processing.py  validation.py  versions.py
backend/app/models/: __init__.py  base.py  ontology.py  user.py
backend/app/schemas/: __init__.py  common.py  graph.py  ontology.py
backend/app/services/: age_backend.py  document_service.py  export_service.py  graph_backend.py  graph_service.py  llm_service.py  neo4j_backend.py  ontology_service.py  validation_service.py
backend/app/tasks/: __init__.py  processing.py
backend/app/utils/: uri.py
backend/tests/: conftest.py  test_api.py  test_document_service.py  test_export_service.py  test_neo4j_backend.py  test_ontology_service.py
examples/: expected_ontology.json  sample_document.md  smoke_test.sh
frontend/: .env.development  Dockerfile  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts  ontologies.ts
frontend/src/components/: AddClassDialog.tsx  ConnectionBanner.tsx  GraphViewer.tsx  Layout.tsx  NodePanel.tsx  ProcessingOverlay.tsx  Toolbar.tsx  (+2 more)
tasks/: lessons.md  todo.md
(+9 files in other folders)
