[project]
name = "ontosphere"
version = "0.2.0"
description = "OntoSphere - Generate ontologies from documents using LLMs"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "celery[redis]>=5.3.0",
    "redis>=5.0.0",
    "rdflib>=7.0.0",
    "pyshacl>=0.25.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "websockets>=12.0",
    "python-docx>=1.1.0",
    "PyPDF2>=3.0.0",
    "python-magic>=0.4.27",
    "apache-age-python>=0.0.7",
    "aiofiles>=24.0",
    "json-repair>=0.30.0",
]

[project.optional-dependencies]
neo4j = [
    "neo4j>=5.0.0",
]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]
dev = [
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]


[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 99
